--- a/raspberry-backend/templates/chartsLoop.html
+++ b/raspberry-backend/templates/chartsLoop.html
@@ -28,4 +28,5 @@
 
 {% block body_scripts %}
 <script src="{{ url_for('static', filename='js/Chart-displayLoop.js') }}"></script> -->
+<script src="{{ url_for('static', filename='js/HevUpdater.js') }}"></script> -->
 {% endblock %}
