--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -198,6 +198,7 @@
 	{% block body_scripts %}
 
 <script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script>
+<script src="{{ url_for('static', filename='js/HevUpdater.js') }}"></script>
 
 <script>
   function setChartXaxisRange_wrapper(element,min,max){
