--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -8,148 +8,169 @@
 <main>
 
   <div class="container-fluid">
-    <div class = "row">
-      <div class = "col-charts-main">
-	<!-- chart on left -->
-	      <div class="row">
-		<div class="col-md-12">
-		    <div class = "main-chart-container"><canvas id="pressure_chart"></canvas></div>
-		</div>
-	      </div>
-	      <div class = "row">
-		<div class="col-md-12">
-		  <div class="main-chart-container"><canvas id="flow_chart"></canvas></div>
-		</div>
-	      </div>
-	      <div class = "row">
-		<div class="col-md-12">
-		  <div class = "main-chart-container"><canvas id="volume_chart"></canvas></div>
-		</div>
-	      </div>
-	      
-	      <div class = "row">
-		  <div class = "range-button-container ml-auto mr-auto">
-		    <input type="button" class="lockable sb-nav-button" name="fivesecs" value="5s" onclick="setChartXaxisRange_wrapper(this,-5,0)" disabled>
-		    <input type="button" class="lockable sb-nav-button" name="thirtysecs" value="30s" onclick="setChartXaxisRange_wrapper(this,-30,0)" disabled>
-		    <input type="button" class="lockable sb-nav-button" name="sixtysecs" value="60s" onclick="setChartXaxisRange_wrapper(this,-60,0)" disabled>
-		    <input type="button" class="lockable sb-nav-button" name="ninetysecs" value="90s" onclick="setChartXaxisRange_wrapper(this,-90,0)" disabled>
-		    <input type="button" class="lockable sb-nav-button" name="pause" value="Pause" onclick="togglePause()" disabled>
-		  </div>
-	      </div>
-      </div>
-      <div class = "col-cards-main">
-	<div class = "row">
-	<!---- row 1 -->
-	    <div class="card-input-reading">
-              <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		      <span class="small text-white col-center" href="#">Mode</span>
-              </div>
-	      <!--<div class="small ml-auto mr-auto">PC-A/C</div>-->
-              <div class="card-body px-1 py-1">
-		<div class = "select-container lockable" disabled>
-		  <select class = "input-reading ml-auto mr-auto pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
-		  <option value = ""></option>
-		  <optgroup label = "Pressure Control Modes">
-		    <option value="opt1" selected>PC-A/C</option>
-		    <option value="opt2">PC-A/C-PRVC</option>
-		  </optgroup>
-		  <optgroup label = "Pressure Support Modes">
-		    <option value="opt3">PC-PSV</option>
-		    <option value="opt4">CPAP</option>
-		  </optgroup>
-		  </select>
-		  </div>
-	      </div>
-	  </div>
 
-	    <div class="card-input-reading">
-              <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
-              </div>
-			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
-			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fi02_percent" class=""></canvas></div>
-	  </div>
+    <div class="tab">
+      <button class="tablinks" onclick="openTab(this, 'Main')">Main</button>
+      <button class="tablinks" onclick="openTab(this, 'Advanced')">Advanced</button>
+    </div>
+  
+    <div id="Main" class="tabcontent">
+	    <div class = "row">
+	      	<div class = "col-charts-main">
+				<!-- chart on left -->
+			    <div class="row">
+					<div class="col-md-12">
+					    <div class = "main-chart-container"><canvas id="pressure_chart"></canvas></div>
+					</div>
+			    </div>
+			    <div class = "row">
+					<div class="col-md-12">
+					  <div class="main-chart-container"><canvas id="flow_chart"></canvas></div>
+					</div>
+		    	</div>
+			    <div class = "row">
+					<div class="col-md-12">
+						  <div class = "main-chart-container"><canvas id="volume_chart"></canvas></div>
+					</div>
+			    </div>
+			    <div class = "row">
+					<div class = "range-button-container ml-auto mr-auto">
+					    <input type="button" class="lockable sb-nav-button" name="fivesecs" value="5s" onclick="setChartXaxisRange_wrapper(this,-5,0)" disabled>
+					    <input type="button" class="lockable sb-nav-button" name="thirtysecs" value="30s" onclick="setChartXaxisRange_wrapper(this,-30,0)" disabled>
+					    <input type="button" class="lockable sb-nav-button" name="sixtysecs" value="60s" onclick="setChartXaxisRange_wrapper(this,-60,0)" disabled>
+					    <input type="button" class="lockable sb-nav-button" name="ninetysecs" value="90s" onclick="setChartXaxisRange_wrapper(this,-90,0)" disabled>
+					    <input type="button" class="lockable sb-nav-button" name="pause" value="Pause" onclick="togglePause()" disabled>
+					</div>
+			    </div>
+	      	</div>
+	     	<div class = "col-cards-main">
+				<div class = "row">
+					<!---- row 1 -->
+				    <div class="card-input-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+					      <span class="small text-white col-center" href="#">Mode</span>
+			            </div>
+			            <div class="card-body px-1 py-1">
+							<div class = "select-container lockable" disabled>
+							  <select class = "input-reading ml-auto mr-auto pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
+								  <option value = ""></option>
+								  <optgroup label = "Pressure Control Modes">
+								    <option value="opt1" selected>PC-A/C</option>
+								    <option value="opt2">PC-A/C-PRVC</option>
+								  </optgroup>
+								  <optgroup label = "Pressure Support Modes">
+								    <option value="opt3">PC-PSV</option>
+								    <option value="opt4">CPAP</option>
+								  </optgroup>
+							  </select>
+							</div>
+					      </div>
+						</div>
 
-	
-	  <div class="card-input-reading">
-		<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-	  <a class="small text-white col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
-		</div>
-		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
-		<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_plateau_pressure"></canvas></div>
-	</div>
+				    <div class="card-input-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
+			            </div>
+						  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fi02_percent" class=""></canvas></div>
+					</div>
 
-	    <div class="card-reading">
-	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
-	      </div>
-		  <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="peak_inspiratory_pressure"></span></div> 
-	    </div>
+					<div class="card-input-reading">
+						<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
+						</div>
+						<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_plateau_pressure"></canvas></div>
+					</div>
+
+				    <div class="card-reading">
+				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
+					    </div>
+						<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="peak_inspiratory_pressure"></span></div> 
+				    </div>
 	
 	<!--- end row 1 -->
 
-	<!-- row 2 -->
-	    <div class="card-reading">
-	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
-	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mean_airway_pressure"></span></div>
-	  </div>
+					<!-- row 2 -->
+				    <div class="card-reading">
+				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
+					    </div>
+				      	<div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mean_airway_pressure"></span></div>
+					</div>
 
-	    <div class="card-reading">
-	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
-	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
-	    </div>
+				    <div class="card-reading">
+				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
+					    </div>
+					    <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
+					</div>
 
 
 	<!-- end row 2 -->
 
 	<!-- row 3 -->
-	    <div class="card-reading">
-              <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">VTI <small>[mL]</small></a>
-              </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_tidal_volume"></span></div>
-	  </div>
-	    <div class="card-reading">
-              <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
-              </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_tidal_volume"></span></div>
-	    </div>
+				    <div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">VTI <small>[mL]</small></a>
+			            </div>
+			            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_tidal_volume"></span></div>
+					</div>
+				    <div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
+			            </div>
+			            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_tidal_volume"></span></div>
+				    </div>
 	    
-	    <div class="card-reading">
-              <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-white col-center" href="#">MVI <small>[L/min]</small></a>
-              </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_minute_volume"></span></div>
-	    </div>
+				    <div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
+						<a class="small text-white col-center" href="#">MVI <small>[L/min]</small></a>
+	              		</div>
+			            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_minute_volume"></span></div>
+				    </div>
 	    
-
-
 	<!-- row 4 -->
 
 
-	    <div class="card-reading">
-              <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
-              </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_minute_volume"></span></div>
-	    </div>
+					<div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
+							<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
+			            </div>
+		            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_minute_volume"></span></div>
+				    </div>
 	    
-	    <div class="card-reading">
-              <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-white col-center" href="#">I:E</a>
-              </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhale_exhale_ratio"></span></div> 
+				    <div class="card-reading">
+		            	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+							<a class="small text-white col-center" href="#">I:E</a>
+			            </div>
+			            <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhale_exhale_ratio"></span></div> 
+				    </div>
+				</div>
+	<!-- end row 4 -->
+		    </div>
+		</div>
+	</div>
+
+	<div id="Advanced" class="tabcontent">
+		<div class = "row">
+	    	<div class = "col py-0 px-3">
+	        	<canvas id="pressure_volume_chart" width="45%" height="22"></canvas>
+	    	</div>
+	     		<div class = "col py-0 px-3">
+		        <canvas id="flow_volume_chart" width="45%" height="22"></canvas>
+		    </div>
+	    </div>
+	    <div class = "row">
+	    	<div class = "col py-0 px-3">
+				<canvas id="pressure_flow_chart" width="45%" height="22"></canvas>
+		    </div>
+		    <div class = "col py-0 px-3">	
+			  	<button id="LoopHoldButton" type="button" onclick="HoldLoop()"> <h1>Hold after Loop</h1> </button>
+			  	<br>
+			  	<button id="LoopStartButton" type="button" onclick="RunLoop()" disabled> <h1>Restart Loop</h1> </button>
+		    </div>
 	    </div>
 	</div>
-	<!-- end row 4 -->
-    </div>
-</div>
-</div>
 </div>
 </main>
 {% endblock %}
@@ -198,6 +219,7 @@
 	{% block body_scripts %}
 
 <script src="{{ url_for('static', filename='js/Chart-display.js') }}"></script>
+<script src="{{ url_for('static', filename='js/Chart-displayLoop.js') }}"></script>
 <script src="{{ url_for('static', filename='js/HevUpdater.js') }}"></script>
 
 <script>
@@ -285,10 +307,37 @@ Object.defineProperty(gauge_fio_container, 'getValue', {
   theme:'MySelector'
   });
 
-</script>
 
+function openTab(el, cityName) {
+  // Declare all variables
+  var i, tabcontent, tablinks;
 
-<script>
+  // Get all elements with class="tabcontent" and hide them
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+
+  // Get all elements with class="tablinks" and remove the class "active"
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+
+  // Show the current tab, and add an "active" class to the button that opened the tab
+  document.getElementById(cityName).style.display = "block";
+  el.className += " active";
+}
+
+$(document).ready ( function(){
+  var tablinks = document.getElementsByClassName("tablinks");
+  if (tablinks.length > 0){
+    openTab(tablinks[0],"Main");
+  }
+  // decide what to unlock based on mode
+  //var object = document.getElementById("Trends");
+  //var opt = object.options[object.selectedIndex];
+});
 function format_ie(thisElement,ie_cont)
 {
     if (thisElement.disabled) return;
