--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -50,7 +50,7 @@
 					</div>	
 				</div>
 			</div>
-		<div class = "col-cards-main">
+		<div class = "col-cards-proto">
 			<div class = "row">
 		  	    <div class="card-reading-proto">
 	        	    <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
