--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -112,7 +112,6 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: black;
   background-color:#1e1e1e;
 }
 
@@ -6056,16 +6055,18 @@ div.active .path-icon{
 
 .lock {
 position: fixed;
-bottom: 0;
+bottom: 1.0rem;
 width:5%;
 right: 0.5rem;
 text-align: center;
 border-top-left-radius: 1.0rem !important;
-border-top-right-radius: 1.0rem !important;
+border-bottom-left-radius: 1.0rem !important;
 padding-top:0.35rem;
 padding-bottom:0.3rem;
-background-color: rgba(255, 255, 255, 0.13);
+background-color: rgba(0, 0, 0, 0.25);
 border: 1px solid rgba(0, 0, 0, 0.125);
+z-index:1000;
+
 }
 .fa-lock{
     width:2rem;height:2rem;
@@ -6205,7 +6206,7 @@ border: 1px solid rgba(0, 0, 0, 0.125);
 /* Style the tab */
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   background-color: #f1f1f1;
   height:1.5rem;
 }
